# project-rsc

./: .gitignore  CMakeLists.txt  diff_drive.launch  package.xml  slam.launch
launch/: diff_drive.launch  diff_drive_tracking.launch  face_recognition.launch  leg_detector.launch  pilot.launch  slam.launch
msg/: move.msg  rotate.msg  stop.msg
res/: faces.csv  faces2.csv
res/dataset2/: faces_dataset2.csv
src/: face_detection.cpp  face_detection_manager.cpp  face_detection_manager.hpp  find_end_position.py  global.h  human_tracking.py  laser.cpp  laser.py  mock_driver.cpp  movement.cpp  odometry.cpp  odometry.h  pilot.cpp  pilot.h  r2serial.cpp  robot.py  slam.py  stop_calibration.cpp  stop_controller.py  stop_driver.cpp  tf_test.py  ticks.calib  tracking.cpp  utils.py  wallfollowing.cpp  wallfollowing.hpp  world.py
src/face/: create_dataset.py
